# elcad

./: .gitignore  .mcp.json  CMakeLists.txt  README.md  todos.txt
.github/: copilot-instructions.md
.github/agents/: speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.git.commit.agent.md  speckit.git.feature.agent.md  speckit.git.initialize.agent.md  speckit.git.remote.agent.md  speckit.git.validate.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/git/scripts/bash/: git-common.sh
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/scripts/bash/: common.sh
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-fix-extrude-preview-normals/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-extrude-preview-normals/checklists/: requirements.md
specs/002-fix-multi-shape-extrude/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-multi-shape-extrude/checklists/: requirements.md
specs/003-fix-sketch-hole-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fix-sketch-hole-selection/checklists/: requirements.md
specs/004-improve-face-selection/: plan.md  spec.md
specs/004-improve-face-selection/checklists/: requirements.md
specs/005-fix-sketch-intersections/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-sketch-intersections/checklists/: requirements.md
specs/006-double-sided-face-rendering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-double-sided-face-rendering/checklists/: requirements.md
specs/007-fix-extrude-shape-fidelity/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-fix-extrude-shape-fidelity/checklists/: requirements.md
specs/008-multi-object-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-multi-object-selection/checklists/: requirements.md
specs/009-fix-face-highlight/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-fix-face-highlight/checklists/: requirements.md
src/: main.cpp  resources.qrc
src/app/: Application.cpp  Application.h
src/core/: Logger.cpp  Logger.h
src/document/: Body.cpp  Body.h  Document.cpp  Document.h  StepIO.cpp  StepIO.h  TransformOps.cpp  TransformOps.h  UndoStack.cpp  UndoStack.h
src/shaders/: edge.frag  edge.vert  gizmo.frag  gizmo.vert  grid.frag  grid.vert  phong.frag  phong.vert
src/sketch/: ExtrudeOperation.cpp  ExtrudeOperation.h  Sketch.cpp  Sketch.h  SketchConstraint.h  SketchEntity.cpp  SketchEntity.h  SketchPicker.cpp  SketchPicker.h  SketchPlane.cpp  SketchPlane.h  SketchProfiles.h  SketchRenderer.cpp  SketchRenderer.h  SketchToWire.cpp  SketchToWire.h  SnapEngine.cpp  SnapEngine.h
src/tools/: CircleTool.cpp  CircleTool.h  LineTool.cpp  LineTool.h  RectTool.cpp  RectTool.h  SketchTool.h  sphere_tess_count.cpp
src/ui/: BodyListPanel.cpp  BodyListPanel.h  BooleanDialog.cpp  BooleanDialog.h  ExtrudeDialog.cpp  ExtrudeDialog.h  MainWindow.cpp  MainWindow.h  MirrorDialog.cpp  MirrorDialog.h  NavCubeWidget.cpp  NavCubeWidget.h  PropertiesPanel.cpp  PropertiesPanel.h  RibbonWidget.cpp  RibbonWidget.h  ShortcutsDialog.cpp  ShortcutsDialog.h  ToolOptionsPanel.cpp  ToolOptionsPanel.h  TransformDialog.cpp  TransformDialog.h  ViewportWidget.cpp  ViewportWidget.h
src/viewport/: Camera.cpp  Camera.h  Gizmo.cpp  Gizmo.h  Grid.cpp  Grid.h  MeshBuffer.cpp  MeshBuffer.h  OriginMarker.cpp  OriginMarker.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
tests/: CMakeLists.txt
tests/selection/: AdditiveSelectionTest.cpp  EmptySpaceClearTest.cpp  SelectionFixtures.cpp  SelectionFixtures.h  SelectionRegressionMain.cpp  ShortcutClearTest.cpp
tests/sketch/: SketchIntersectionExtrudeTest.cpp  SketchIntersectionFixtures.cpp  SketchIntersectionFixtures.h  SketchIntersectionRefreshTest.cpp  SketchIntersectionRegressionMain.cpp  SketchIntersectionSelectionTest.cpp
tools/: sphere_tess_count.cpp  sphere_tess_count_impl.cpp
